# aiofence

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PRINCIPLES.md  LICENSE  README.md  pyproject.toml
.claude/commands/: branch.md  commit.md  spec.md
.github/workflows/: ci.yml  publish.yml
aiofence/: __init__.py  core.py
aiofence/triggers/: __init__.py  event.py  timeout.py
constellate/: __init__.py  base.py  core.py  errors.py  sources.py
constellate/sources/: __init__.py  event.py  timeout.py
constellate/triggers/: event.py  timeout.py
docs/: architecture.md  cpython-task-cancellation.md
tests/: conftest.py  test_fence_basics.py  test_fence_interop.py  test_fence_taskgroup.py  test_fence_triggers.py  test_invariants.py  test_protocol.py  test_smoke.py
